// Jest Snapshot v1

exports[`Watch mode flows Pressing "P" enters pattern mode 1`] = `
"


 pattern › p
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorTo(12, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 2`] = `
"


 pattern › p.
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorTo(13, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 3`] = `
"


 pattern › p.*
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorTo(14, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 4`] = `
"


 pattern › p.*1
[MOCK - cursorSavePosition]


 Pattern matches 3 files.

  › path/to/file1-test.js

  › path/to/file10-test.js

  › path/to/file11-test.js
[MOCK - cursorTo(15, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 5`] = `
"


 pattern › p.*10
[MOCK - cursorSavePosition]


 Pattern matches 1 file.

  › path/to/file10-test.js
[MOCK - cursorTo(16, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 6`] = `
"


 pattern › p.*1
[MOCK - cursorSavePosition]


 Pattern matches 3 files.

  › path/to/file1-test.js

  › path/to/file10-test.js

  › path/to/file11-test.js
[MOCK - cursorTo(15, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 7`] = `
"


 pattern › p.*
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorTo(14, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 8`] = `
"


 pattern › p.*3
[MOCK - cursorSavePosition]


 Pattern matches 1 file.

  › path/to/file3-test.js
[MOCK - cursorTo(15, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Results in pattern mode get truncated appropriately 1`] = `
"


 pattern › a
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorTo(12, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Results in pattern mode get truncated appropriately 2`] = `
"


 pattern › a
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › ...to/file1-test.js

  › ...to/file2-test.js

  › ...to/file3-test.js

  › ...to/file4-test.js

  › ...to/file5-test.js

  › ...to/file6-test.js

  › ...to/file7-test.js

  › ...to/file8-test.js

  › ...to/file9-test.js

  › ...o/file10-test.js

  › and 1 more file
[MOCK - cursorTo(12, 4)]
[MOCK - cursorRestorePosition]"
`;

exports[`Watch mode flows Results in pattern mode get truncated appropriately 3`] = `
"


 pattern › a
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › ...st.js

  › ...st.js

  › ...st.js

  › ...st.js

  › ...st.js

  › ...st.js

  › ...st.js

  › ...st.js

  › ...st.js

  › ...t.js

  › and 1 more file
[MOCK - cursorTo(12, 4)]
[MOCK - cursorRestorePosition]"
`;
